# RaiseAttention

./: .gitignore  AGENTS.md  CURRENT_PLAN.md  README.md  flake.nix  next.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  file_io_examples.py  simple_file_io.py  working_examples.py
resources/: MDF.md  PROMPT.md  VENV_DETECTION.md
src/libsightseeing/: LICENCING  README.md  pyproject.toml
src/libsightseeing/libsightseeing/: __init__.py  core.py  gitignore.py  patterns.py
src/libsightseeing/tests/: test_core.py
src/libsoulsearching/: README.md  pyproject.toml
src/libsoulsearching/libsoulsearching/: __init__.py  cli.py  core.py  models.py
src/libsoulsearching/libsoulsearching/detectors/: __init__.py  hatch.py  pd.py  poetry.py  pyenv.py  rye.py  utils.py  uv.py  venv.py
src/libsoulsearching/tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_detectors_edge_cases.py  test_integration_real.py
src/libvenvfinder/: README.md  pyproject.toml
src/libvenvfinder/libvenvfinder/: __init__.py  cli.py  core.py  models.py
src/libvenvfinder/libvenvfinder/detectors/: __init__.py  hatch.py  pd.py  pipenv.py  poetry.py  pyenv.py  rye.py  utils.py  uv.py  venv.py
src/libvenvfinder/tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_detectors_edge_cases.py  test_integration_real.py
src/raiseattention/: __init__.py  analyser.py  analyzer.py  ast_visitor.py  cache.py  cli.py  config.py  env_detector.py  external_analyser.py  external_analyzer.py  ignore_parser.py  lsp_server.py  stub_resolver.py
src/raiseattention/stubs/: .gitkeep
src/raiseattention/stubs/stdlib/: python-3.10.pyras  python-3.11.pyras  python-3.12.pyras  python-3.13.pyras  python-3.14.pyras  python-3.15.pyras
src/standardstubber/: README.md  generate_all.py  pyproject.toml
src/standardstubber/standardstubber/: __init__.py  __main__.py  analyser.py  cli.py  generate_all_wrapper.py  models.py  patterns.py  python_analyser.py  resolver.py  writer.py  writer_json.py
src/standardstubber/stubs/clang/: cindex.pyi
src/standardstubber/typings/clang/: __init__.pyi  cindex.pyi
tests/: __init__.py  test_analyser.py  test_analyzer.py  test_analyzer_synthetic.py  test_ast_visitor.py  test_cache.py  test_cli.py  test_config.py  test_env_detector.py  test_external_analyser.py  test_external_analyzer.py  test_lsp_server.py
tests/fixtures/: __init__.py  code_samples.py
