[project]
name = "raiseattention"
version = "0.1.0"
description = "a static exception flow analyser for python with lsp integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "RaiseAttention Contributors"},
]
keywords = ["exception", "analysis", "lsp", "static-analysis", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",
    "typing-extensions>=4.6.0",
    "libvenvfinder",
]

[tool.uv.sources]
libvenvfinder = { workspace = true }

[tool.uv.workspace]
members = ["src/libvenvfinder"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
raiseattention = "raiseattention.cli:main"

[project.urls]
homepage = "https://github.com/anomalyco/raiseattention"
repository = "https://github.com/anomalyco/raiseattention"
documentation = "https://github.com/anomalyco/raiseattention#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raiseattention"]

[tool.raiseattention]
python_path = "auto"
venv_path = "auto"
strict_mode = false
allow_bare_except = false
require_reraise_after_log = true

exclude = [
    "**/tests/**",
    "**/migrations/**",
    "**/__pycache__/**",
    "**/.venv/**",
    "**/.git/**",
]

ignore_exceptions = [
    "KeyboardInterrupt",
    "SystemExit",
]

[tool.raiseattention.cache]
enabled = true
max_file_entries = 10000
max_memory_mb = 500
ttl_hours = 24

[tool.raiseattention.lsp]
debounce_ms = 500
max_diagnostics_per_file = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["pygls.*", "lsprotocol.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "raiseattention.lsp_server"
disallow_untyped_decorators = false
disallow_subclassing_any = false

[tool.basedpyright]
pythonVersion = "3.11"
include = ["src/raiseattention"]
exclude = ["tests/", "playground/"]
strict = ["*"]
reportMissingTypeStubs = "none"
reportAny = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownParameterType = "warning"
reportMissingTypeArgument = "error"
reportUnannotatedClassAttribute = "warning"
reportImplicitOverride = "warning"
reportUnusedImport = "error"
reportDuplicateImport = "error"
reportDeprecated = "warning"
reportRedeclaration = "error"
reportUnusedCallResult = "warning"
reportUnusedParameter = "warning"
reportUnusedFunction = "none"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "D403",  # first word of first line should be capitalized (MDF uses lowercase)
    "D405",  # section name should be properly capitalized (MDF uses lowercase)
    "D406",  # section name should end with newline (MDF format)
    "D407",  # missing dashed underline after section (MDF uses no dashes)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src/raiseattention"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[dependency-groups]
dev = [
    "basedpyright>=1.37.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
