[project]
name = "libsightseeing"
version = "0.1.0"
description = "a shared library for file finding and source resolution with gitignore support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["file-finding", "gitignore", "source-resolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pathspec>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
homepage = "https://github.com/anomalyco/raiseattention"
repository = "https://github.com/anomalyco/raiseattention"
documentation = "https://github.com/anomalyco/raiseattention#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libsightseeing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
