[project]
name = "libsightseeing"
version = "0.2.0"
description = "a shared library for file finding and source resolution with gitignore support"
readme = "README.md"
license = "Unlicense OR 0BSD"
license-files = ["LICEN[CS]E*", "LICENCING"]
requires-python = ">=3.11"
authors = [
    {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
maintainers = [
    {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
keywords = ["file-finding", "gitignore", "source-resolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pathspec>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Documentation = "https://github.com/markjoshwel/RaiseAttention/tree/main/src/libsightseeing#readme"
Repository = "https://github.com/markjoshwel/RaiseAttention/tree/main/src/libsightseeing"
Issues = "https://github.com/markjoshwel/RaiseAttention/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libsightseeing"]
exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/*.pyc",
    "**/__pycache__/**",
    "**/.git/**",
    "**/.venv/**",
    "**/.mypy_cache/**",
    "**/.ruff_cache/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
