[project]
name = "libsoulsearching"
version = "0.1.0"
description = "universal python virtual environment finder"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["venv", "virtualenv", "python", "poetry", "pdm", "uv", "rye", "pipenv", "hatch", "pyenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typing-extensions>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
venvfinder = "libsoulsearching.cli:main"

[project.urls]
homepage = "https://github.com/anomalyco/raiseattention"
repository = "https://github.com/anomalyco/raiseattention"
documentation = "https://github.com/anomalyco/raiseattention#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libsoulsearching"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
