[project]
name = "libsoulsearching"
version = "0.1.1"
description = "universal python virtual environment finder"
readme = "README.md"
license = "Unlicense OR 0BSD"
license-files = ["LICEN[CS]E*", "LICENCING"]
requires-python = ">=3.11"
authors = [
    {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
maintainers = [
    {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
keywords = ["venv", "virtualenv", "python", "poetry", "pdm", "uv", "rye", "pipenv", "hatch", "pyenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typing-extensions>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
venvfinder = "libsoulsearching.cli:main"

[project.urls]
Documentation = "https://github.com/markjoshwel/RaiseAttention/tree/main/src/libsoulsearching#readme"
Repository = "https://github.com/markjoshwel/RaiseAttention/tree/main/src/libsoulsearching"
Issues = "https://github.com/markjoshwel/RaiseAttention/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libsoulsearching"]
exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/*.pyc",
    "**/__pycache__/**",
    "**/.git/**",
    "**/.venv/**",
    "**/.mypy_cache/**",
    "**/.ruff_cache/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
