[project]
name = "standardstubber"
version = "2026.2.14"
description = "cpython standard library exception stub generator for raiseattention"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["cpython", "stubs", "exceptions", "static-analysis", "libclang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "libclang>=18.1.1",
    "packaging>=24.0",
    "typing-extensions>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
standardstubber = "standardstubber.cli:main"
generate-all = "standardstubber.generate_all_wrapper:main"

[project.urls]
homepage = "https://github.com/anomalyco/raiseattention"
repository = "https://github.com/anomalyco/raiseattention"
documentation = "https://github.com/anomalyco/raiseattention#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["standardstubber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
stubPath = "typings"
