[project]
name = "standardstubber"
version = "2026.2.14+1"
description = "cpython standard library exception stub generator for raiseattention"
readme = "README.md"
license = "Unlicense OR 0BSD"
license-files = ["LICEN[CS]E*", "LICENCING"]
requires-python = ">=3.11"
authors = [
    {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
maintainers = [
    {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
keywords = ["cpython", "stubs", "exceptions", "static-analysis", "libclang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "libclang>=18.1.1",
    "packaging>=24.0",
    "typing-extensions>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
standardstubber = "standardstubber.cli:main"
generate-all = "standardstubber.generate_all_wrapper:main"

[project.urls]
Documentation = "https://github.com/markjoshwel/RaiseAttention/tree/main/src/standardstubber#readme"
Repository = "https://github.com/markjoshwel/RaiseAttention/tree/main/src/standardstubber"
Issues = "https://github.com/markjoshwel/RaiseAttention/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["standardstubber"]
exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/*.pyc",
    "**/__pycache__/**",
    "**/.git/**",
    "**/.venv/**",
    "**/resources/**",
    "**/.mypy_cache/**",
    "**/.ruff_cache/**",
    "**/typings/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
stubPath = "typings"
